set up contact footer to feed into formstack

--- a/competition.html
+++ b/competition.html
@@ -300,8 +300,18 @@
       <div class="container-fluid" id="compFooter">
         <p class="text-center">leave us your email for Ctrl+Shift info + updates!</p>
         <div class="container">
-          <input type="text" placeholder="your email address">
-          <button type="button" class="btn btn-primary brandButton" style="display: inline">GO</button>
+          <form method="post" enctype="multipart/form-data" action="https://www.formstack.com/forms/index.php" id="fsForm2988037">
+            <input type="hidden" name="form" value="2988037" />
+            <input type="hidden" name="viewkey" value="eDKWSITtYT" />
+            <input type="hidden" name="hidden_fields" id="hidden_fields2988037" value="" />
+            <input type="hidden" name="_submit" value="1" />
+            <input type="hidden" name="incomplete" id="incomplete2988037" value="" />
+            <input type="hidden" name="incomplete_password" id="incomplete_password2988037" />
+            <input type="hidden" name="style_version" value="3" />
+            <input type="hidden" id="viewparam" name="viewparam" value="729010" />
+            <input type="text" placeholder="email address" id="field61756090" name="field61756090">
+            <button class="btn btn-primary brandButton" style="display: inline" id="fsSubmitButton2988037" type="submit" value="Submit Form">GO</button>
+          </form>
         </div>
         <div class="container-fluid" style="padding-top: 2vh;">
           <p class="text-left" style="font-size: small">2018 © Coded by Kids</p>
