hid banner image on small devices because i'm a terrible front end dev

--- a/competition.html
+++ b/competition.html
@@ -58,7 +58,7 @@
 
     <div class="noSpace container-fluid">
       <!--jumbo image-->
-      <div class="row container-fluid noSpace">
+      <div class="row container-fluid noSpace d-none d-sm-block">
         <img src="./img/comp/main_image.jpg" class="img-fluid" style="max-height: 100vh">
       </div>
 
