added contest rule for highschool, quick description for site concept

--- a/competition.html
+++ b/competition.html
@@ -189,12 +189,13 @@
           <h1 class="bold">CONTEST<br>RULES</h1>
         </div>
         <div class="col-md-8">
+          <p>Must be a high school student</p>
           <p>Project must fit into one of the three following categories: a business or nonprofit idea, research/advocacy, or a community service project.</p>
           <p>Submitted project must be at least 4 pages (or 4 sections if using a one page design)</p>
           <p>Project must be coded in HTML and CSS. JS/jQuery and other frameworks may be used, but are not required</p>
           <p>Extra points will be awarded to responsive sites</p>
           <p>Site must be coded “by hand” - no use of templates or online site builders (Wix, Weebly, etc.)</p>
-          <p>Final project must be hosted on Github</p>
+          <p>Final project must be hosted on Github - we'll provide more details closer to submission time</p>
         </div>
       </div>
 
@@ -251,7 +252,7 @@
               <input type="email" class="form-control" id="field61197688" name="field61197688" required>
             </div>
             <div class="form-group">
-              <label for="school">What high school did you attend?</label>
+              <label for="school">What high school do you attend?</label>
               <input type="text" class="form-control" id="field61197716" name="field61197716" required>
             </div>
             <div class="form-group">
@@ -288,8 +289,8 @@
             </div>
             <div class="form-group">
               <label for="name">Site Concept</label>
-              <textarea rows="4" cols="50" class="form-control" id="field61199163" name="field61199163" required>
-                       </textarea>
+              <small class="form-text text-muted">Just a couple paragraphs about what you plan on building</small>
+              <textarea rows="4" cols="50" class="form-control" id="field61199163" name="field61199163" required></textarea>
             </div>
             <button class="btn btn-primary brandButton" type="submit" id="fsSubmitButton2970113">Submit</button>
             <!--id="fsSubmitButton2970113"-->
