--- a/competition.html
+++ b/competition.html
@@ -49,9 +49,10 @@
           <img src="./img/comp/ctrl.png" class="img-fluid">
       </div>
       <div class="row-fluid" id="makedoText">
-        <h4><b>June 23, 2018 Philadelphia, PA</b></h4>
+        <h4><b>June 23, 2018</b></h4>
+        <h4><b>Philadelphia, PA</b></h4>
         <h5>Compete in Philadelphia's first citywide coding competition for high school students.</h5>
-        <a href="#register" class="btn btn-primary brandButton">Register</a>
+        <a href="#register" class="btn btn-primary brandButton" style="margin-top: 2vh;">Register</a>
       </div>
 
     </div>
@@ -59,7 +60,7 @@
     <div class="noSpace container-fluid">
       <!--jumbo image-->
       <div class="row container-fluid noSpace d-none d-sm-block">
-        <img src="./img/comp/main_image.jpg" class="img-fluid" style="max-height: 100vh">
+        <img src="./img/comp/teenager_group_devices_large.jpg" class="img-fluid" style="max-height: 110vh; width: 100%;">
       </div>
 
       <!--brought by-->
@@ -74,28 +75,11 @@
         <p>On June 23rd, the top 10 teams will present their projects to a team of live judges, and cash prizes will be awarded to the best projects.</p>
 
         <div class="container" id="prizes">
-          <div class="row">
-            <div class="col-md-2">
-              <img src="./img/comp/prize_icon_2.svg" id="prize2" class="image-fluid mx-auto d-block">
-            </div>
-            <div class="col-md-10" style="padding-top: 2vh;">
-              <div class="row">
-                <div class="col-md-4">
-                  <h3 class="text-md-left">1st Place: $1,000</h3>
-                </div>
-                <div class="col-md-4">
-                  <h3 class="text-md-left">2nd Place: $750</h3>
-                </div>
-                <div class="col-md-4">
-                  <h3 class="text-md-left">3rd Place: $500</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h3 class="text-md-left">Two Honorable Mention Awards: $250</h3>
-                </div>
-              </div>
-            </div>
+          <div class="row-fluid">
+            <h3>1st Place: $1,000</h3>
+            <h3>2nd Place: $750</h3>
+            <h3>3rd Place: $500</h3>
+            <h3>Two Honorable Mention Awards: $250</h3>
           </div>
         </div>
       </div>
