contest schedule design changes

--- a/competition.html
+++ b/competition.html
@@ -91,13 +91,13 @@
         </div>
         <div class="col-md-8" style="padding-left: 3em; padding-top: 5vh; padding-bottom: 7vh;">
           <h1 class="bold"><span class="blue">CONTEST</span> <br> <span class="red">SCHEDULE</span></h1>
-          <p>All major competition milestones and dates are listed below. Please download the full competition schedule for more details. <br> *Please note that all participants are required to attend at least one meetup. </p>
+          <p>All major competition milestones and dates are listed below. Please download the full competition schedule for more details. Please note that all participants are required to attend at least one meetup. </p>
           <br>
           <!--dates-->
           <div class="container" id="dates">
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p>March 1, 2018</p>
+                <p>March 5, 2018</p>
               </div>
               <div class="col-sm-auto">
                 <p class="text-md-left">Online Application Opens</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p>April 1, 2018</p>
+                <p>April 2, 2018</p>
               </div>
               <div class="col-sm-auto">
                 <p class="text-md-left">Online Application Closes at 5pm EST</p>
@@ -156,7 +156,7 @@
           <!--button container-->
           <div class="row">
             <div class="col-sm-12" style="padding-top: 2vh;">
-              <a href="#" id="downloadLink"><h4>Download Full Schedule<h4></a>
+              <a href="./img/comp/CtrlShift_Schedule_FINAL.pdf" id="downloadLink" download><h4>Download Full Schedule<h4></a>
             </div>
             <div class="col-sm-12" style="padding-top: 2vh;">
               <button type="button" class="btn btn-primary btn-lg brandButton">REGISTER</button>
