--- a/competition.html
+++ b/competition.html
@@ -173,13 +173,17 @@
           <h1 class="bold">CONTEST<br>RULES</h1>
         </div>
         <div class="col-md-8">
-          <p>Must be a high school student</p>
-          <p>Project must fit into one of the three following categories: a business or nonprofit idea, research/advocacy, or a community service project.</p>
-          <p>Submitted project must be at least 4 pages (or 4 sections if using a one page design)</p>
-          <p>Project must be coded in HTML and CSS. JS/jQuery and other frameworks may be used, but are not required</p>
-          <p>Extra points will be awarded to responsive sites</p>
-          <p>Site must be coded “by hand” - no use of templates or online site builders (Wix, Weebly, etc.)</p>
-          <p>Final project must be hosted on Github - we'll provide more details closer to submission time</p>
+          <ul>
+            <li>Students must attend a school located in Philadelphia.</li>
+            <li>Competitors must be between the ages of 13-18.</li>
+            <li>Students can participate as individuals or in teams of no more than 3 individuals.</li>
+            <li>Project must fit into one of the three following categories: a business or nonprofit idea, research/advocacy, or a community service project.</li>
+            <li>Submitted project must be at least 4 pages (or 4 sections if using a one page design)</li>
+            <li>Project must be coded in HTML and CSS. JS/jQuery and other frameworks may be used, but are not required</li>
+            <li>Extra points will be awarded to responsive sites</li>
+            <li>Site must be coded “by hand” - no use of templates or online site builders (Wix, Weebly, etc.)</li>
+            <li>Final project must be hosted on <a href="http://www.github.com" target="_blank">Github</a> - we'll provide more details closer to submission time</li>
+          </ul>
         </div>
       </div>
 
