design changes for registration form

--- a/competition.html
+++ b/competition.html
@@ -277,12 +277,14 @@
             </div>
             <div class="form-group">
               <label for="name">Site Concept</label>
-              <small class="form-text text-muted">Just a couple paragraphs about what you plan on building</small>
+              <small class="form-text text-muted">Briefly describe your project in less than 100 words in the field below.</small>
               <textarea rows="4" cols="50" class="form-control" id="field61199163" name="field61199163" required></textarea>
             </div>
             <button class="btn btn-primary brandButton" type="submit" id="fsSubmitButton2970113">Submit</button>
             <!--id="fsSubmitButton2970113"-->
           </form>
+          <br>
+          <p>For more information, please email us at ctrlshift@codedbykids.com</p>
         </div>
       </div>
       <!--footer-->
