added smaller header image for small views

--- a/competition.html
+++ b/competition.html
@@ -59,8 +59,10 @@
 
     <div class="noSpace container-fluid">
       <!--jumbo image-->
-      <div class="row container-fluid noSpace d-none d-sm-block">
-        <img src="./img/comp/teenager_group_devices_large.jpg" class="img-fluid" style="max-height: 110vh; width: 100%;">
+      <div class="container-fluid noSpace">
+        <img src="./img/comp/teenager_group_devices_large.jpg" class="img-fluid d-none d-sm-block" style="max-height: 100vh; width: 100%;">
+        <img src="./img/comp/teenager_group_devices_small.jpg" class="img-fluid d-block d-sm-none" style="width: 100%;">
+
       </div>
 
       <!--brought by-->
