--- a/competition.html
+++ b/competition.html
@@ -265,6 +265,11 @@
               <input type="tel" class="form-control" id="field61292545" name="field61292545" required>
             </div>
             <div class="form-group">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="field61873114_1" name="field61873114[]" value="Yes" required>I have permission from a parent or guardian to enter this contest.
+              </div>
+            </div>
+            <div class="form-group">
               <label for="field61199061_1">Are you working in a group?</label>
               <div class="form-check">
                 <input class="form-check-input" type="radio" id="field61199061_1" name="field61199061" value="No" required>No
@@ -276,6 +281,14 @@
             <div class="form-group" id="members">
               <label for="name">First and last names of group members</label>
               <input type="text" class="form-control" id="field61199105" name="field61199105">
+            </div>
+            <div class="form-group">
+              <label for="Category">Project Category</label>
+              <select class="form-control" d="field61873092" name="field61873092" required>
+                <option value="Business or Nonprofit Idea">Business or Nonprofit Idea</option>
+                <option value="Research/advocacy">Research/advocacy</option>
+                <option value="Community Service">Community Service</option>
+              </select>
             </div>
             <div class="form-group">
               <label for="name">Site Concept</label>
