--- a/competition.html
+++ b/competition.html
@@ -60,7 +60,7 @@
     <div class="noSpace container-fluid">
       <!--jumbo image-->
       <div class="container-fluid noSpace">
-        <img src="./img/comp/teenager_group_devices_large.jpg" class="img-fluid d-none d-sm-block" style="max-height: 100vh; width: 100%;">
+        <img src="./img/comp/main_image_final.jpg" class="img-fluid d-none d-sm-block" style="width: 100%;">
         <img src="./img/comp/teenager_group_devices_small.jpg" class="img-fluid d-block d-sm-none" style="width: 100%;">
 
       </div>
