fixed rules and register mobile padding

--- a/competition.html
+++ b/competition.html
@@ -99,7 +99,7 @@
           <div class="container" id="dates">
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p>March 5, 2018</p>
+                <p class="bold">March 5, 2018</p>
               </div>
               <div class="col-sm-auto">
                 <p class="text-md-left">Online Application Opens</p>
@@ -107,7 +107,7 @@
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p>April 2, 2018</p>
+                <p class="bold">April 2, 2018</p>
               </div>
               <div class="col-sm-auto">
                 <p class="text-md-left">Online Application Closes at 5pm EST</p>
@@ -115,7 +115,7 @@
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p>April 20, 2018</p>
+                <p class="bold">April 20, 2018</p>
               </div>
               <div class="col-sm-auto">
                 <p class="text-md-left">Meetup 1: Refining Your Project/Idea</p>
@@ -123,7 +123,7 @@
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p>May 18, 2018</p>
+                <p class="bold">May 18, 2018</p>
               </div>
               <div class="col-sm-auto">
                 <p class="text-md-left">Meetup 2:Preparing for Submission</p>
@@ -131,7 +131,7 @@
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p>June 1, 2018</p>
+                <p class="bold">June 1, 2018</p>
               </div>
               <div class="col-sm-auto">
                 <p class="text-md-left">Online Submission Due (Virtual Round)</p>
@@ -139,7 +139,7 @@
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p>June 8, 2018</p>
+                <p class="bold">June 8, 2018</p>
               </div>
               <div class="col-sm-auto">
                 <p class="text-md-left">Teams Selected for Live Competition</p>
@@ -147,7 +147,7 @@
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p>June 23, 2018</p>
+                <p class="bold">June 23, 2018</p>
               </div>
               <div class="col-sm-auto">
                 <p class="text-md-left">Live Competition</p>
@@ -171,11 +171,11 @@
 
       <!--rules-->
       <div class="row container-fluid noSpace" id="rules">
-        <div class="col-md-4" style="padding-left: 4em;">
+        <div class="col-md-4">
           <h1 class="bold">CONTEST<br>RULES</h1>
         </div>
         <div class="col-md-8">
-          <ul>
+          <ul id="ruleList">
             <li>Students must attend a school located in Philadelphia.</li>
             <li>Competitors must be between the ages of 13-18.</li>
             <li>Students can participate as individuals or in teams of no more than 3 individuals.</li>
@@ -192,7 +192,7 @@
       <!--register-->
       <div class="container-fluid noSpace" id="register">
         <div class="row-fluid" style="">
-          <h1 class="bold"><span class="blue">REGISTER FOR</span> <br> <span class="red">CTRL+SHIFT</span></h1>
+          <h1 class="bold"><span class="blue">REGISTER FOR</span> <br> <span class="red">CTRL + SHIFT</span></h1>
         </div>
         <div class="col-md-8 no-gutter">
           <p><b><span style="color: red">*</span>All fields are required</b></p>
