for the dates section, made the date bold and caps to stand out, lightened the font weight for the rest

--- a/competition.html
+++ b/competition.html
@@ -99,58 +99,58 @@
           <div class="container" id="dates">
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p class="bold">March 5, 2018</p>
+                <p class="bold">MARCH 5, 2018</p>
               </div>
               <div class="col-sm-auto">
-                <p class="text-md-left">Online Application Opens</p>
+                <p class="text-md-left light">Online Application Opens</p>
               </div>
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p class="bold">April 2, 2018</p>
+                <p class="bold">APRIL 2, 2018</p>
               </div>
               <div class="col-sm-auto">
-                <p class="text-md-left">Online Application Closes at 5pm EST</p>
+                <p class="text-md-left light">Online Application Closes at 5pm EST</p>
               </div>
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p class="bold">April 20, 2018</p>
+                <p class="bold">APRIL 20, 2018</p>
               </div>
               <div class="col-sm-auto">
-                <p class="text-md-left">Meetup 1: Refining Your Project/Idea</p>
+                <p class="text-md-left light">Meetup 1: Refining Your Project/Idea</p>
               </div>
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p class="bold">May 18, 2018</p>
+                <p class="bold">MAY 18, 2018</p>
               </div>
               <div class="col-sm-auto">
-                <p class="text-md-left">Meetup 2:Preparing for Submission</p>
+                <p class="text-md-left light">Meetup 2:Preparing for Submission</p>
               </div>
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p class="bold">June 1, 2018</p>
+                <p class="bold">JUNE 1, 2018</p>
               </div>
               <div class="col-sm-auto">
-                <p class="text-md-left">Online Submission Due (Virtual Round)</p>
+                <p class="text-md-left light">Online Submission Due (Virtual Round)</p>
               </div>
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p class="bold">June 8, 2018</p>
+                <p class="bold">JUNE 8, 2018</p>
               </div>
               <div class="col-sm-auto">
-                <p class="text-md-left">Teams Selected for Live Competition</p>
+                <p class="text-md-left light">Teams Selected for Live Competition</p>
               </div>
             </div>
             <div class="row justify-content-start">
               <div class="col-md-5">
-                <p class="bold">June 23, 2018</p>
+                <p class="bold">JUNE 23, 2018</p>
               </div>
               <div class="col-sm-auto">
-                <p class="text-md-left">Live Competition</p>
+                <p class="text-md-left light">Live Competition</p>
               </div>
             </div>
           </div>
