modified headers for ctrl shift register and rule sections to work better on mobile

--- a/competition.html
+++ b/competition.html
@@ -171,7 +171,7 @@
 
       <!--rules-->
       <div class="row container-fluid noSpace" id="rules">
-        <div class="col-md-4">
+        <div class="col-md-4" id="ruleCol">
           <h1 class="bold">CONTEST<br>RULES</h1>
         </div>
         <div class="col-md-8">
