--- a/competition.html
+++ b/competition.html
@@ -179,7 +179,7 @@
             <li>Students must attend a school located in Philadelphia.</li>
             <li>Competitors must be between the ages of 13-18.</li>
             <li>Students can participate as individuals or in teams of no more than 3 individuals.</li>
-            <li>Project must fit into one of the three following categories: a business or nonprofit idea, research/advocacy, or a community service project.</li>
+            <li>Project must fit into one of the three following categories: a business or nonprofit idea, research/advocacy, or arts and media.</li>
             <li>Submitted project must be at least 4 pages (or 4 sections if using a one page design)</li>
             <li>Project must be coded in HTML and CSS. JS/jQuery and other frameworks may be used, but are not required</li>
             <li>Extra points will be awarded to responsive sites</li>
@@ -287,7 +287,7 @@
               <select class="form-control" d="field61873092" name="field61873092" required>
                 <option value="Business or Nonprofit Idea">Business or Nonprofit Idea</option>
                 <option value="Research/advocacy">Research/advocacy</option>
-                <option value="Community Service">Community Service</option>
+                <option value="Arts/Media">Arts/Media</option>
               </select>
             </div>
             <div class="form-group">
