--- a/competition.html
+++ b/competition.html
@@ -195,111 +195,7 @@
           <h1 class="bold"><span class="blue">REGISTER FOR</span> <br> <span class="red">CTRL + SHIFT</span></h1>
         </div>
         <div class="col-md-8 no-gutter">
-          <p><b><span style="color: red">*</span>All fields are required</b></p>
-          <form class="needs-validation" method="post" enctype="multipart/form-data" action="https://www.formstack.com/forms/index.php" id="fsForm2970113">
-            <input type="hidden" name="form" value="2970113" />
-            <input type="hidden" name="viewkey" value="TzEHX6WlUV" />
-            <input type="hidden" name="hidden_fields" id="hidden_fields2970113" value="" />
-            <input type="hidden" name="_submit" value="1" />
-            <input type="hidden" name="incomplete" id="incomplete2970113" value="" />
-            <input type="hidden" name="incomplete_password" id="incomplete_password2970113" />
-            <input type="hidden" name="style_version" value="3" />
-            <input type="hidden" id="viewparam" name="viewparam" value="729010" />
-            <div class="form-group">
-              <label for="name">Applicant Name</label><br>
-              <div class="row">
-                <div class="col">
-                  <input type="text" class="form-control" id="field61196941-first" name="field61196941-first" placeholder="First Name" required>
-                </div>
-                <div class="col">
-                  <input type="text" class="form-control" id="field61196941-last" name="field61196941-last" placeholder="Last Name" required>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="dob">DOB</label>
-              <input type="date" class="form-control" id="field61661806" name="field61661806" required>
-            </div>
-            <div class="form-group">
-              <label for="gender">Gender</label>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" id="field61197152_1" name="field61197152" value="Male" required>Male
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" id="field61197152_2" name="field61197152" value="Female" required>Female
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" id="field61197152_3" name="field61197152" value="Other" required>Prefer to self describe
-              </div>
-            </div>
-            <div class="form-group" id="identity">
-              <label>What's your gender identity? <span class="text-muted">not required</span></label>
-              <input type="text" id="field61197264" name="field61197264" class="form-control">
-              <small class="form-text text-muted">If you're comfortable sharing, we'd love to know!</small>
-            </div>
-            <div class="form-group">
-              <label for="dob">Email Address</label>
-              <input type="email" class="form-control" id="field61197688" name="field61197688" required>
-            </div>
-            <div class="form-group">
-              <label for="school">What high school do you attend?</label>
-              <input type="text" class="form-control" id="field61197716" name="field61197716" required>
-            </div>
-            <div class="form-group">
-              <label for="name">Parent/Guardian Name</label>
-              <div class="row">
-                <div class="col">
-                  <input type="text" class="form-control" id="field61197660-first" name="field61197660-first" placeholder="First Name" required>
-                </div>
-                <div class="col">
-                  <input type="text" class="form-control" id="field61197660-last" name="field61197660-last" placeholder="Last Name" required>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="dob">Parent/Guardian Email Address</label>
-              <input type="email" class="form-control" id="field61197670" name="field61197670" required>
-            </div>
-            <div class="form-group">
-              <label for="dob">Parent/Guardian Phone Number</label>
-              <input type="tel" class="form-control" id="field61292545" name="field61292545" required>
-            </div>
-            <div class="form-group">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="field61873114_1" name="field61873114[]" value="Yes" required>I have permission from a parent or guardian to enter this contest.
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="field61199061_1">Are you working in a group?</label>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" id="field61199061_1" name="field61199061" value="No" required>No
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" id="field61199061_2" name="field61199061" value="Yes" required>Yes
-              </div>
-            </div>
-            <div class="form-group" id="members">
-              <label for="name">First and last names of group members</label>
-              <input type="text" class="form-control" id="field61199105" name="field61199105">
-            </div>
-            <div class="form-group">
-              <label for="Category">Project Category</label>
-              <select class="form-control" d="field61873092" name="field61873092" required>
-                <option value="Business or Nonprofit Idea">Business or Nonprofit Idea</option>
-                <option value="Research/advocacy">Research/advocacy</option>
-                <option value="Arts/Media">Arts/Media</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="name">Site Concept</label>
-              <small class="form-text text-muted">Briefly describe your project in less than 100 words in the field below.</small>
-              <textarea rows="4" cols="50" class="form-control" id="field61199163" name="field61199163" required></textarea>
-            </div>
-            <button class="btn btn-primary brandButton" type="submit" id="fsSubmitButton2970113">Submit</button>
-            <!--id="fsSubmitButton2970113"-->
-          </form>
-          <br>
-          <p>For more information, please email us at ctrlshift@codedbykids.com</p>
+          <p>The application is now closed</p>
         </div>
       </div>
       <!--footer-->
