--- a/competition.html
+++ b/competition.html
@@ -187,6 +187,8 @@
           <h1 class="bold"><span class="red">CTRL + SHIFT</span><br><span class="blue">SUBMISSION</span></h1>
         </div>
         <div class="col-md-8 no-gutter">
+           <p><b><span style="color: red">*</span>All fields are required</b></p>
+           <p><b>If you worked in a group, only one group member needs to submit</b></p>
           <!--FORM START-->
           <form  class="needs-validation" method="post" enctype="multipart/form-data" action="https://www.formstack.com/forms/index.php" id="fsForm3077722">
             <input type="hidden" name="form" value="3077722" />
@@ -242,19 +244,26 @@
           <div class="form-group">
             <label for="Category">Link to your Github repo</label>
             <input type="text" class="form-control" id="field64852408" name="field64852408">
+            <small class="form-text text-muted">Need help <a target="_blank" href="https://help.github.com/articles/adding-an-existing-project-to-github-using-the-command-line/">pushing your project to Github?</a></small>
           </div>
 
           <!--link to pages-->
           <div class="form-group">
-            <label for="Category">Link to your Github Pages</label>
+            <label for="Category">Link to your Github Pages (the live site)</label>
             <input type="text" class="form-control" id="field64852418" name="field64852418">
+            <small class="form-text text-muted">Need help <a target="_blank" href="https://help.github.com/articles/configuring-a-publishing-source-for-github-pages/">enabling Github Pages?</a></small>
           </div>
 
           <div class="form-group">
-            <label for="Category">Video/Essay Upload</label>
+            <p>A one-page (maximum) write-up OR a one-minute video about your project. For both the write-up and the video, please discuss the following:
+              <ol style="padding-left: 2em">
+                <li>Why you chose your project idea?</li>
+                <li>Why are you interested in technology?</li>
+              </ol>
+            </p>
             <input type="file" id="field64852429" name="field64852429" size="30" required class="form-control" aria-required="true"
             />
-            <div class="showMobile">File uploads may not work on some mobile devices.</div>
+            <small class="form-text text-muted">File uploads may not work on some mobile devices.</small>
           </div>
 
           <button class="btn btn-primary brandButton" type="submit" id="fsSubmitButton3077722">Submit</button>
