added submission message

--- a/competition.html
+++ b/competition.html
@@ -187,6 +187,7 @@
           <h1 class="bold"><span class="red">CTRL + SHIFT</span><br><span class="blue">SUBMISSION</span></h1>
         </div>
         <div class="col-md-8 no-gutter">
+          <p>Thanks for participating in Ctrl+Shift! Please follow the directions below to submit your project. All submissions must be received by June 1, 2018 at midnight EST.</p>
            <p><b><span style="color: red">*</span>All fields are required</b></p>
            <p><b>If you worked in a group, only one group member needs to submit</b></p>
           <!--FORM START-->
